<?xml version="1.0"?>
<package format="3">
  <name>reach</name>
  <version>0.1.0</version>
  <description>ROS 2 package for testing standalone Differential IK Controller</description>
  <maintainer email="inakirm111@gmail.com">inaki</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>tf2_ros</exec_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
